--- a/src/templates/utils/style.css
+++ b/src/templates/utils/style.css
@@ -16,7 +16,8 @@ body {
 article{
 
     padding: 1em;
-    width:80%;
+    width:75%;
+    max-width:75%;
     overflow: hidden;
     border: 3px solid #575a60;
     border-radius: 1em 1em 1em 1em;
@@ -25,12 +26,26 @@ article{
     font-family: Verdana,arial,sans-serif;
 }
 
+article.ind{
+
+  padding: 1em;
+  width:97%;
+  max-width:97%;
+  overflow: hidden;
+  border: 3px solid #575a60;
+  border-radius: 1em 1em 1em 1em;
+  margin: 3px;
+  float: left;
+  font-family: Verdana,arial,sans-serif;
+
+}
+
 nav {
     float: left;
     margin: 3px;
     margin-left: 15px;
-    max-width: 15%;
-    width: 15%;
+    max-width: 20%;
+    width: 20%;
     overflow-x: hidden;
     overflow-y:auto;
     padding: 0;
@@ -94,6 +109,32 @@ div.box {
   display:block;
   word-wrap: break-word;
   font-family: Verdana,arial,sans-serif;
+}
+
+.code {
+	color: #3d3d3d;
+  width:97%;
+  max-width: 97%;
+  font-family: Verdana,arial,sans-serif;
+  font-weight: 580;
+  display:block;
+  word-wrap: break-word;
+  font-family: Verdana,arial,sans-serif;
+}
+
+.comm {
+	color: #247218;
+}
+.string {
+	color: #B20000;
+  font-style: italic;
+}
+.keyword {
+	color: #0000FF;
+}
+
+.numbr{
+  color: #ba33e0;
 }
 
 a {
