--- a/src/templates/indexTemplate.jinja
+++ b/src/templates/indexTemplate.jinja
@@ -20,22 +20,22 @@
 <h2><a name="_toc"></a>Documented functions: </h2>
 <ul style="list-style:none">
   {% for fun in functions %}
-    <li><img alt="mt" border="0" src="{{style}}/matlabicon.gif"> <a href="{{fun.name}}.html">{{fun.name}}</a>: {{fun.summ}}</li>
+    <li><img alt="mt" border="0" src="{{style}}/matlabicon.gif"> <a href="./files/{{fun.name}}.html">{{fun.name}}</a>: {{fun.summ}}</li>
     {% endfor %}
 </ul>
 <h2><a name="_toc"></a>Documented scripts: </h2>
 <ul style="list-style:none">
   {% for scr in scripts %}
-    <li><img alt="mt" border="0" src="{{style}}/matlabicon.gif"> <a href="{{scr.name}}.html">{{scr.name}}</a>: {{scr.desc}}</li>
+    <li><img alt="mt" border="0" src="{{style}}/matlabicon.gif"> <a href="./files/{{scr.name}}.html">{{scr.name}}</a>: {{scr.desc}}</li>
     {% endfor %}
 </ul>
 <h2><a name="_toc"></a>Documented classes: </h2>
 <ul style="list-style:none">
     {% for cls in classes %}
-    <li><img alt="mt" border="0" src="{{style}}/matlabicon.gif"> <a href="{{cls.name}}.html">{{cls.name}}</a>: {{cls.summ}}</li>
+    <li><img alt="mt" border="0" src="{{style}}/matlabicon.gif"> <a href="./files/{{cls.name}}.html">{{cls.name}}</a>: {{cls.summ}}</li>
     {% endfor %}
 </ul>
 </article>
-<footer><address>Generated on {{date}} by <strong><a href="https://bitbucket.org/ferreteleco/pymdoc-generator" title="PyMDoc documentation generator for Matlab v1.0">PyDoc documentation generator for Matlab v1.0</a></strong> &copy; 2017</address></footer>
+<footer><address>Generated on {{date}} by <strong><a href="https://bitbucket.org/ferreteleco/pymdoc-generator" title="PyMDoc documentation generator for Matlab v1.0">PyDoc documentation generator for Matlab v{{version}}</a></strong> &copy; 2017</address></footer>
 </body>
 </html>
