--- a/src/templates/indexTemplate.jinja
+++ b/src/templates/indexTemplate.jinja
@@ -2,7 +2,7 @@
                 "http://www.w3.org/TR/REC-html40/loose.dtd">
 <html>
 <head>
-  <title>Description of computeGrid</title>
+  <title>Index of {{project_name}} project</title>
   <meta name="keywords" content="{{project_name}}">
   <meta name="description" content="{{project_name}}">
   <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
