--- a/src/templates/scriptTemplate.jinja
+++ b/src/templates/scriptTemplate.jinja
@@ -2,7 +2,7 @@
                 "http://www.w3.org/TR/REC-html40/loose.dtd">
 <html>
 <head>
-  <title>Description of computeGrid</title>
+  <title>Description of {{fun.name}}</title>
   <meta name="keywords" content="{{fun.name}}">
   <meta name="description" content="{{fun.name}}">
   <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
