--- a/src/wizard.ui
+++ b/src/wizard.ui
@@ -6,9 +6,21 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1027</width>
-    <height>477</height>
+    <width>1030</width>
+    <height>475</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>1030</width>
+    <height>475</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>1030</width>
+    <height>475</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
@@ -208,7 +220,7 @@
      </rect>
     </property>
    </widget>
-   <widget class="QWidget" name="">
+   <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
       <x>12</x>
@@ -248,7 +260,7 @@
      </item>
     </layout>
    </widget>
-   <widget class="QWidget" name="">
+   <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
       <x>10</x>
@@ -286,13 +298,11 @@
      </item>
     </layout>
    </widget>
-   <zorder>overallprogress</zorder>
-   <zorder>idir</zorder>
+   <zorder>odir</zorder>
+   <zorder>name</zorder>
+   <zorder>layoutWidget</zorder>
+   <zorder>layoutWidget</zorder>
    <zorder>logo</zorder>
-   <zorder>usage</zorder>
-   <zorder>code</zorder>
-   <zorder>recursive</zorder>
-   <zorder>verbose</zorder>
    <zorder>generate</zorder>
    <zorder>console</zorder>
    <zorder>label</zorder>
@@ -303,9 +313,6 @@
    <zorder>browseidir</zorder>
    <zorder>browseodir</zorder>
    <zorder>browselogo</zorder>
-   <zorder>usage</zorder>
-   <zorder>recursive</zorder>
-   <zorder>taskprogress</zorder>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
