Currently working to replicate folders in output dir. Done all except in CRI fields and index file (need to add new index files for each sub folder)

--- a/src/templates/classTemplate.jinja
+++ b/src/templates/classTemplate.jinja
@@ -17,7 +17,7 @@
   {% endif %}</header>
   <nav>
     {% for item in pathslist %}
-    <a href="{{item+'.html'}}">{{item}}</a>
+    <a href="{{''.join(item)+'.html'}}">{{item[1]}}</a>
     {% endfor %}
   </nav>
 <article>
