--- a/src/templates/indexFolderTemplate.jinja
+++ b/src/templates/indexFolderTemplate.jinja
@@ -12,12 +12,16 @@
 </head>
 <body>
 <a name="_top"></a>
-<header>{% if project_logo %}<center><img src="{{project_logo}}" alt="Project Logo" border="2px" style="width:10%;height:10%;"></center>{% endif %} {% if project_name %}
-  <br><strong>{{project_name}}</strong></br>
+<header>{% if project_logo %}<center><img src="{{style}}\{{project_logo}}" alt="Project Logo" border="2px" style="width:10%;height:10%;"></center>{% endif %} {% if project_name %}
+  <br><strong>{{project_name}} Project</strong></br>
   {% endif %}</header>
 <article class="ind">
+{% if project_name %}
+<div><a href="{{dir}}/{{project_name}}.html">Home</a>\{{currfold}}</div>
+{% else %}
 <div><a href="{{dir}}/index.html">Home</a>\{{currfold}}</div>
-<h1><img alt="^" border="0" src="{{style}}/matlabicon.gif"><strong> Index of {{project_name}} project: '{{currfold}}' folder</strong></h1>
+{% endif %}
+<h1><img alt="^" border="0" src="{{style}}/matlabicon.gif"><strong> Index of '{{currfold}}' folder</strong></h1>
 {% if functions %}
 <h2><a name="_toc"></a>Documented functions: </h2>
 <ul style="list-style:none">
