--- a/src/templates/indexTemplate.jinja
+++ b/src/templates/indexTemplate.jinja
@@ -15,14 +15,25 @@
 <header>{% if project_logo %}<center><img src="{{style}}\{{project_logo}}" alt="Project Logo" border="2px" style="width:10%;height:10%;"></center>{% endif %} {% if project_name %}
   <br><strong>{{project_name}} Project</strong></br>
   {% endif %}</header>
-<article class="ind">
+  <nav>
+    <center><h3> File Navigation </h3></center>
+    {% for item in project_folders %}
+    <a href="{{item+'\index.html'}}"><img alt="^" border="0" src="{{style}}/folder.ico"><b class='nm'> {{item.replace(cmmprfxout, '')}}</b></a>
+    {% for elm in pathslist %}
+    {% if  elm[0] in item %}
+    <a href="{{'/'.join(elm)}}.html">&nbsp;&nbsp;&nbsp;&nbsp;<img alt="^" border="0" src="{{style}}/matlabicon.gif"><i> {{elm[1]}}</i></a>
+    {% endif %}
+    {% endfor %}
+    {% endfor %}
+  </nav>
+<article>
 <h1><img alt="^" border="0" src="{{style}}/matlabicon.gif"><strong> Index of {{project_name}} project</strong></h1>
 
 {% if project_folders %}
 <h2><a name="_toc"></a>Source folders: </h2>
 <ul style="list-style:none">
   {% for folder in project_folders %}
-    <li><img alt="mt" border="0" src="{{style}}/folder.ico"> <a href="{{folder}}/index.html">{{folder.replace(cmmprfxout, '')}}</a></li>
+    <li><img alt="mt" border="0" src="{{style}}/folder.ico"> <a href="{{folder}}/index.html"><b>{{folder.replace(cmmprfxout, '')}}</b></a></li>
     {% endfor %}
 </ul>
 {% endif %}
@@ -31,7 +42,7 @@
 <h2><a name="_toc"></a>Documented functions: </h2>
 <ul style="list-style:none">
   {% for fun in functions %}
-    <li><img alt="mt" border="0" src="{{style}}/matlabicon.gif"> <a href="{{fun.path}}\{{fun.name}}.html">{{fun.name}}</a>: {{fun.summ}}</li>
+    <li><img alt="mt" border="0" src="{{style}}/matlabicon.gif"> <a href="{{fun.path}}\{{fun.name}}.html"><b>{{fun.name}}</b></a>: {{fun.summ}}</li>
     {% endfor %}
 </ul>
 {% endif %}
@@ -39,7 +50,7 @@
 <h2><a name="_toc"></a>Documented scripts: </h2>
 <ul style="list-style:none">
   {% for scr in scripts %}
-    <li><img alt="mt" border="0" src="{{style}}/matlabicon.gif"> <a href="{{scr.path}}\{{scr.name}}.html">{{scr.name}}</a>: {{scr.desc}}</li>
+    <li><img alt="mt" border="0" src="{{style}}/matlabicon.gif"> <a href="{{scr.path}}\{{scr.name}}.html"><b>{{scr.name}}</b></a>: {{scr.desc}}</li>
     {% endfor %}
 </ul>
 {% endif %}
@@ -47,7 +58,7 @@
 <h2><a name="_toc"></a>Documented classes: </h2>
 <ul style="list-style:none">
     {% for cls in classes %}
-    <li><img alt="mt" border="0" src="{{style}}/matlabicon.gif"> <a href="{{cls.path}}\{{cls.name}}.html">{{cls.name}}</a>: {{cls.summ}}</li>
+    <li><img alt="mt" border="0" src="{{style}}/matlabicon.gif"> <a href="{{cls.path}}\{{cls.name}}.html"><b>{{cls.name}}</b></a>: {{cls.summ}}</li>
     {% endfor %}
 </ul>
 {% endif %}
